# RFID

./: README.md
MySQL/: RFID.sql
c++_version/: CMakeLists.txt  README.md  read.cpp  write.cpp
c++_version/bcm2835-1.50/: Makefile  config.status
c++_version/bcm2835-1.50/doc/: Doxyfile  Makefile
c++_version/bcm2835-1.50/doc/html/: bcm2835_8h_source.html  blink_8c-example.html  event_8c-example.html  examples.html  files.html  group__constants.html  group__gpio.html  group__i2c.html  group__init.html  group__lowlevel.html  group__pwm.html  group__spi.html  group__st.html  i2c_8c-example.html  index.html  input_8c-example.html  modules.html  pwm_8c-example.html  spi_8c-example.html  spin_8c-example.html
c++_version/bcm2835-1.50/doc/html/search/: all_0.js  enumvalues_0.js  functions_0.js  searchdata.js
c++_version/bcm2835-1.50/src/: Makefile  test
c++_version/bcm2835-1.50/src/.deps/: test.Po
c_version/: README.md  rc522
python_version/: README.md
python_version/kivy_ui/: Display.py  README.md  bios.kv  bios.py  display.kv  sandbox.db  sandbox.py  verfs.kv  verfs.py
python_version/read_and_write/: data.db  read.py  test.py  write.py
